kubernetes/flask-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  replicas: 1  # Nombre de répliques souhaité
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: alakh1111/talendcontroller  # Remplacer par l'image de votre application flask
        ports:
        - containerPort: 5000  # Port sur lequel votre application écoute
